[package]
name = "srmap"
version = "0.1.15"
authors = ["alanamarzoev"]

description = "A lock-free, eventually consistent, concurrent multi-value map."
license = "MIT/Apache-2.0"

[dependencies]
serde_derive = "1.0.8"
serde_json = "1.0.8"
serde = { version = "1.0.8", features = ["rc"] }
heapsize = "0.4.2"
