[package]
name = "srmap"
version = "0.1.15"
authors = ["alanamarzoev"]

description = "A lock-free, eventually consistent, concurrent multi-value map."
license = "MIT/Apache-2.0"

[profile.release]
debug = true

[dependencies]
evmap = { path = "/Users/alanamarzoev/Desktop/multidb/rust-evmap" }

# uncomment to turn on all logging
# slog = { version = "2.2.2", features = ["max_level_trace", "release_max_level_trace"] }
slog = "2.2.2"
slog-term = "2.4.0"
time = "0.1"
